# adversarial-prompt-suite

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_evaluator.py
datasets/: base_attack_templates.jsonl
docs/: architecture.md  interview-prep.md
examples/: quickstart.py
social/: linkedin-post.md  x-post.md
src/adversarial_prompt_suite/: __init__.py  classifier.py  cli.py  coverage.py  dataset.py  evaluator.py  exceptions.py  models.py  reporter.py
src/adversarial_prompt_suite/attacks/: __init__.py  extraction.py  injection.py  jailbreak.py
tests/: conftest.py  test_attacks.py  test_classifier.py  test_coverage.py  test_dataset.py  test_evaluator.py
