[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-prompt-suite"
version = "0.1.0"
description = "Systematic red-teaming framework for adversarial prompt evaluation — jailbreak detection, injection classification, attack surface coverage metrics"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Rajath John", email = "jrajath94@gmail.com" },
]
keywords = [
    "llm-safety",
    "red-teaming",
    "adversarial-prompts",
    "ai-safety",
    "prompt-injection",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
adversarial-eval = "adversarial_prompt_suite.cli:main"

[project.urls]
Homepage = "https://github.com/jrajath94/adversarial-prompt-suite"
Repository = "https://github.com/jrajath94/adversarial-prompt-suite"
Issues = "https://github.com/jrajath94/adversarial-prompt-suite/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
src = ["src"]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
